# FAIR-data

./: NX_TA_under_construction_Ju.py  README.md
GUI/: Dockerfile_GUI_PES  ELNfiller.py  Nomad_API.py  PES_GUI - Removed Credentials.py  README.md  pyproject.toml
GUI/Config/pynxtools_xps/: config_vms.json
GUI/Development notebook/: test.ipynb
GUI/Example/: D18 full spectra.nxs  D18 full spectra.vms  D18_and_BTP-eC9_Changed Sample Prep Sheet.xlsx  eln_Jules_D18_vms_KSC_UPS - try autofill_interface.yaml
